[gd_scene load_steps=3 format=3 uid="uid://do42mk4be24ko"]

[ext_resource type="Script" path="res://screens/StartScene.gd" id="1_iwt4h"]
[ext_resource type="Theme" uid="uid://dd2xtxl27npqh" path="res://gui/theme.tres" id="2_vt1h5"]

[node name="StartScene" type="Node2D"]
script = ExtResource("1_iwt4h")

[node name="StartButton" type="Button" parent="."]
offset_left = 54.0
offset_top = 460.0
offset_right = 324.0
offset_bottom = 524.0
theme = ExtResource("2_vt1h5")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 54.0
offset_top = 544.0
offset_right = 324.0
offset_bottom = 608.0
theme = ExtResource("2_vt1h5")
theme_override_font_sizes/font_size = 40
text = "Credits"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
